nearest/tests/compile-fail/derive_type_with_drop.rs
//! A type implementing Drop must not derive Flat.

use nearest::Flat;

#[derive(Flat)]
struct Bad {
  x: u32,
}

impl Drop for Bad {
  fn drop(&mut self) {}
}

fn main() {}
